--- a/TaskGX/TaskGX.csproj
+++ b/TaskGX/TaskGX.csproj
@@ -101,6 +101,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormCriarConta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCriarConta.Designer.cs">
+      <DependentUpon>FormCriarConta.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +123,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilizadores.cs" />
+    <EmbeddedResource Include="FormCriarConta.resx">
+      <DependentUpon>FormCriarConta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
