--- a/TaskGX/TaskGX.csproj
+++ b/TaskGX/TaskGX.csproj
@@ -101,10 +101,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormCriarConta.cs">
+    <Compile Include="GUI\FormCriarConta.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCriarConta.Designer.cs">
+    <Compile Include="GUI\FormCriarConta.Designer.cs">
       <DependentUpon>FormCriarConta.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\FormCentralConta.cs">
@@ -129,7 +129,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilizadores.cs" />
-    <EmbeddedResource Include="FormCriarConta.resx">
+    <EmbeddedResource Include="GUI\FormCriarConta.resx">
       <DependentUpon>FormCriarConta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Form1.resx">
